# clean-dir

./: Cargo.toml  Makefile  README.md
src/: cleaner.rs  cli.rs  detector.rs  display.rs  main.rs  scanner.rs
