[package]
name = "clean-dir"
version = "0.1.0"
edition = "2021"
description = "Find and remove project build/dependency directories to reclaim disk space"

[dependencies]
clap = { version = "4", features = ["derive"] }
jwalk = "0.8"
rayon = "1.10"
anyhow = "1"
colored = "2"
indicatif = "0.17"
walkdir = "2"
